force-app/main/default/objects/WhatsApp_Campaign_Member__c/WhatsApp_Campaign_Member__c.object-meta.xml
<CustomObject>
    <label>WhatsApp Campaign Member</label>
    <nameField>
        <displayFormat>WCM-{000000}</displayFormat>
        <label>WhatsApp Campaign Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WhatsApp Campaign Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>