force-app/main/default/objects/WhatsApp_Campaign_Member__c/fields/Booking__c.field-meta.xml
<CustomField>
    <fullName>Booking__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Booking</label>
    <referenceTo>Booking__c</referenceTo>
    <relationshipLabel>WhatsApp Campaign Members</relationshipLabel>
    <relationshipName>WhatsApp_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>