force-app/main/default/objects/WhatsApp_Campaign_Member__c/fields/Member_Id__c.field-meta.xml
<CustomField>
    <fullName>Member_Id__c</fullName>
    <label>Member Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>