force-app/main/default/objects/WhatsApp_Campaign_Member__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>WhatsApp Campaign Members</relationshipLabel>
    <relationshipName>WhatsApp_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>