force-app/main/default/objects/WhatsApp_Campaign_Member__c/fields/WhatsApp_Campaign__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WhatsApp Campaign</label>
    <referenceTo>WhatsApp_Campaign__c</referenceTo>
    <relationshipLabel>WhatsApp Campaign Members</relationshipLabel>
    <relationshipName>WhatsApp_Campaign_Members</relationshipName>
    <type>Lookup</type>
</CustomField>